--- a/templates/result.html
+++ b/templates/result.html
@@ -10,9 +10,9 @@
 </head>
 <body>  
         <br>
-	<p> &nbsp;&nbsp Congratulations </p>
+	<center><h1 style="color:#228B22;"> <i>Congratulations..! </i></h1>
 	<div class = "container">
-	<a href="../"><input type="button" value="Logout" style="float: right;"></a>
+	<a href="../"><input type="button" value="Logout" style=""></a></center>
 	
 </body>
 </html>
