--- a/templates/failure.html
+++ b/templates/failure.html
@@ -7,8 +7,8 @@
   <body>
       
         
-      <div class = "container"><h3 style = "color:red;">  {{ bot }}</h3></div>
-	<a href="../">Try again</a>
+      <center><div class = "container"><h1 style = "color:#FF0000;padding-top:50px;"><i>  {{ bot }}.. :(</i></h1></div>
+	<a href="../">Try again</a></center>
 	
   </body>
 </html>
